--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Soluciones Tecnológicas</title>
+    <title>Soluciones Tecnológicas</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -27,7 +27,7 @@
     <section id="inicio" class="hero">
         <h1>Soluciones Tecnológicas para tu Negocio</h1>
         <p>Ofrecemos servicios de consultoría, desarrollo de software y soporte técnico.</p>
-        <a href="#servicios" class="btn">Conoce más</a>
+        <a href="#servicios" class="button">Conoce más</a>
     </section>
 
     <!-- Servicios Section -->
@@ -48,13 +48,14 @@
             </div>
         </div>
     </section>
-    <div class="servicios-container">
-        <div class="servicio">
+
     <!-- Nosotros Section -->
-    <section id="nosotros" class="nosotros">
-        <h2>Sobre Nosotros</h2>
+     
+     <div class="servicio">
+        <h3>Sobre nosotros</h3>
         <p>Somos una empresa líder en soluciones tecnológicas, comprometida con la innovación y la calidad.</p>
-    </section>
+  
+ 
 
     <!-- Contacto Section -->
     <section id="contacto" class="contacto">
@@ -64,13 +65,13 @@
             <input type="email" id="email" name="email" required>
             <label for="message">Tu mensaje:</label>
             <textarea id="message" name="message" required></textarea>
-            <button type="submit" class="btn">Enviar</button>
-          </form>
+            <button type="submit" class="button">Enviar</button>
+        </form>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025john comunicaciones. Todos los derechos reservados.</p>
+        <p>&copy; 2025 john comunicaciones. Todos los derechos reservados.</p>
     </footer>
 
     <script src="scripts.js"></script>
