--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
     <!-- Header -->
     <header>
         <div class="logo">
-            <img src="logo.jpeg" alt="john Logo">
+            <img src="logo.jpeg" alt="Logo de John Comunicaciones" loading="lazy">
         </div>
         <nav>
             <ul>
@@ -50,12 +49,10 @@
     </section>
 
     <!-- Nosotros Section -->
-     
-     <div class="servicio">
-        <h3>Sobre nosotros</h3>
+    <section id="nosotros" class="nosotros">
+        <h2>Sobre Nosotros</h2>
         <p>Somos una empresa líder en soluciones tecnológicas, comprometida con la innovación y la calidad.</p>
-  
- 
+    </section>
 
     <!-- Contacto Section -->
     <section id="contacto" class="contacto">
@@ -71,7 +68,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 john comunicaciones. Todos los derechos reservados.</p>
+        <p>&copy; 2025 John Comunicaciones. Todos los derechos reservados.</p>
     </footer>
 
     <script src="scripts.js"></script>
