--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Header -->
     <header>
         <div class="logo">
-            <img src="logo.jpeg" alt="Logo de John Comunicaciones" loading="lazy">
+            <img src="logo_joqu.jpeg" alt="Logo de John Comunicaciones" loading="lazy">
         </div>
         <nav>
             <ul>
